[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kymobutler"
version = "2.0.0"
description = "AI-powered kymograph analysis for microscopy"
license = "GPL-3.0-or-later"
requires-python = ">=3.9"
authors = [
    {name = "Max Jakobs"},
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "Pillow>=9.0",
    "scikit-image>=0.21",
    "scipy>=1.10",
    "PyWavelets>=1.4",
    "click>=8.0",
    "tqdm>=4.60",
]

[project.optional-dependencies]
convert = ["onnx", "onnx2torch"]
dev = ["pytest>=7.0", "pytest-cov", "ruff", "mypy"]

[project.scripts]
kymobutler = "kymobutler.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
